[package]
name = "rust-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
axum = { version = "0.6.18", features = ["ws", "headers"]}
axum-extra = { version = "0.7.4"}
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.3"
chrono = { version = "0.4.24", features = ["serde"] }
ezsockets = { version = "0.5.0", features = ["axum"]}
serde = { version = "1.0.164", default-features = true, features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
tokio-tungstenite = "0.18.0"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.1", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17"}
axum-typed-websockets = { version = "0.5.0", default-features = true, features = ["json"] }
serde_json = "1.0.99"
actix-web = "4.3.1"
actix = "0.13.0"
actix-web-actors = "4.2.0"
tokio-util = "0.7.8"
actix-files = "0.6.2"
actix-codec = "0.5.1"
byteorder = "1.4.3"
rand = "0.8.5"
env_logger = "0.10.0"
reqwest = { version = "0.11.18", features = ["json"] }
anyhow = "1.0.71"
color-eyre = "0.6.2"
once_cell = "1.18.0"
axum-tungstenite = "0.2.0"
pokeapi-model = "0.1.4"
serde-inline-default = "0.1.1"
